--- a/src/templates/_loadingView.hbs
+++ b/src/templates/_loadingView.hbs
@@ -1,11 +1,11 @@
 <div class="loadingView js-loadingView">
     <div class="loadingViewMedia u-center-middle">
         <div class="loadingViewMedia-figure">
-            <img src="assets/images/openscope-radar-sweep.gif" height="150" width="150" />
+            <img src="assets/images/openscope-stac-logo.svg" height="150" width="150" alt="openScope STAC radar" />
         </div>
         <div class="loadingViewMedia-content">
             <div class="loadingViewMedia-hd">
-                <h1 class="hdg hdg_1">openScope</h1>
+                <h1 class="hdg hdg_1">openScope - STAC</h1>
             </div>
             <div class="loadingViewMedia-bd">
                 Air Traffic Control Simulator
