--- a/src/templates/_loadingView.hbs
+++ b/src/templates/_loadingView.hbs
@@ -1,7 +1,7 @@
 <div class="loadingView js-loadingView">
     <div class="loadingViewMedia u-center-middle">
         <div class="loadingViewMedia-figure">
-            <img src="assets/images/openscope-stac-logo.svg" height="150" width="150" alt="openScope STAC radar" />
+            <img src="assets/images/openscope-radar-sweep.gif" height="150" width="150" />
         </div>
         <div class="loadingViewMedia-content">
             <div class="loadingViewMedia-hd">
