--- a/src/templates/_loadingView.hbs
+++ b/src/templates/_loadingView.hbs
@@ -5,7 +5,9 @@
         </div>
         <div class="loadingViewMedia-content">
             <div class="loadingViewMedia-hd">
-                <h1 class="hdg hdg_1">openScope - STAC</h1>
+                <h1 class="hdg hdg_1">
+                    openScope <span style="font-size: 2em;">- STAC</span>
+                </h1>
             </div>
             <div class="loadingViewMedia-bd">
                 Air Traffic Control Simulator
