--- a/src/templates/_loadingView.hbs
+++ b/src/templates/_loadingView.hbs
@@ -6,7 +6,7 @@
         <div class="loadingViewMedia-content">
             <div class="loadingViewMedia-hd">
                 <h1 class="hdg hdg_1">
-                    openScope <span style="font-size: 2em;">- STAC</span>
+                    openScope <span style="font-size: 2em;">  STAC</span>
                 </h1>
             </div>
             <div class="loadingViewMedia-bd">
